--- a/expressjs-start/views/layout.jade
+++ b/expressjs-start/views/layout.jade
@@ -18,14 +18,31 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='#') Project name
+          a.navbar-brand(href='/') SmartMail
         #navbar.navbar-collapse.collapse
-          form.navbar-form.navbar-right(action="/users", method="post")
-            .form-group
-              input.form-control(type='text', placeholder='Email', name='email')
-            .form-group
-              input.form-control(type='text', placeholder='Username', name='username')
-            .form-group
-              input.form-control(type='password', placeholder='password', name='password')
-            button.btn.btn-success(type='submit') Sign up
+          ul.nav.navbar-nav
+            li.active
+              a(href='#') Home
+            li
+              a(href='#about') Sign Up
+            li
+              a(href='#contact') Log In
+            li.dropdown
+              a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')
+                | Dropdown
+                span.caret
+              ul.dropdown-menu(role='menu')
+                li
+                  a(href='#') Action
+                li
+                  a(href='#') Another action
+                li
+                  a(href='#') Something else here
+                li.divider
+                li.dropdown-header Nav header
+                li
+                  a(href='#') Separated link
+                li
+                  a(href='#') One more separated link
+
     block content
