--- a/views/emails/sent.jade
+++ b/views/emails/sent.jade
@@ -5,6 +5,6 @@ block content
       .container
         h1 Your message was sent!
         p
-          | This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.
+          | Your message was successfully sent.
         p
-          a.btn.btn-primary.btn-lg(href='#', role='button') Learn more »
+          a.btn.btn-primary.btn-lg(href='/email/new', role='button') Send Another Email
