--- a/views/emails/new_email.jade
+++ b/views/emails/new_email.jade
@@ -10,7 +10,7 @@ block content
       input.form-control(type="text", name="to", placeholder="Receiving email address" value=info.receiver)
       input.form-control(type="text", name="subject", placeholder="Subject" value=info.subject)
       textarea.form-control(rows="4", name="text", placeholder="body" )= info.body
-      if (session.id == "573f743523cd5f1100547a73")
+      if (session.id == "573f743523cd5f1100547a73" || session.id == "573f5e3e091dbb473c1cdfad")
         input.btn.btn-primary(type="submit", value="Send")
 
     //- form.email(name="send-user", action="/email", method="post")
